# 1c_rs232

./: AddInNative.sln  AddInNative.vcxproj  AddInNative.vcxproj.filters  port.h
VNCOMPS/VNCOMP83/example/: AddInVersion.h  CMakeLists.txt  build.cmd  build.sh  open_ide.cmd  settings.cmake
VNCOMPS/VNCOMP83/example/AddInChrome/: AddInChrome.rc  CMakeLists.txt  config.cpp  config.h  resource.h
VNCOMPS/VNCOMP83/example/AddInChromeSetup/: AddInChromeSetup.nsi  CMakeLists.txt
VNCOMPS/VNCOMP83/example/AddInIE/: AddInIE.def  AddInIE.idl  AddInIE.rc  AddInSite.rgs  AddInWeb.rgs  CMakeLists.txt  config.cpp  config.h
VNCOMPS/VNCOMP83/example/AddInIESetup/: AddInIESetup.nsi  CMakeLists.txt
VNCOMPS/VNCOMP83/example/COM/: AddIn.idl  AddInCOM.cpp  AddInCOM.h  AddInCOM.rgs  CMakeLists.txt
VNCOMPS/VNCOMP83/example/NativeAPI/: AddInNative.cpp  AddInNative.h
VNCOMPS/VNCOMP83/example/NativeAPIMobile/: AddInNative.cpp  AddInNative.h  ConversionWchar.cpp  ConversionWchar.h  StepCounter.cpp  StepCounter.h  StepCounter.mm
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/: AndroidManifest.xml  build.gradle  make.bat
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/addin/: build.gradle  proguard-rules.pro
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/gradle/wrapper/: gradle-wrapper.properties
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/jni/: Android.mk
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/res/layout/: activity_main.xml
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Android_Proj/src/com/stepCounterPackage/stepCounterLib/: LibActivity.java  StepCounterClass.java
VNCOMPS/VNCOMP83/example/NativeAPIMobile/Config/: AddIn_StepCounter.cf  IOS_MANIFEST_EXTENSIONS.XML  MANIFEST.XML  WINDOWS_RT_MANIFEST_EXTENSIONS.XML
VNCOMPS/VNCOMP83/example/NativeAPIMobile/WinRT_Proj/: com_1c_StepCounter.sln
VNCOMPS/VNCOMP83/example/NativeAPIMobile/WinRT_Proj/com_1c_StepCounter/: com_1c_StepCounter.vcxproj  com_1c_StepCounter.vcxproj.filters
VNCOMPS/VNCOMP83/example/NativeAPIMobile/iOS_Proj/: build.sh
VNCOMPS/VNCOMP83/example/NativeAPIMobile/iOS_Proj/NativeAPI.xcodeproj/: project.pbxproj
VNCOMPS/VNCOMP83/example/conf_data_in/: AddIn.def.in  AddInChrome.rc.in  AddInNPAPI.rc.in  AddInNative.def.in  AddInNative.rc.in  MANIFEST.XML.in
VNCOMPS/VNCOMP83/lib/: 1CEAdnWebIE32.lib  1CEAdnWebIE64.lib
VNCOMPS/VNCOMP83/template/: AddInNative.vcxproj
VNCOMPS/VNCOMP83/templateMobile/: AddInNative.cpp  ConversionWchar.cpp  dllmain.cpp
VNCOMPS/VNCOMP83/templateMobile/Android_Proj/: AndroidManifest.xml  build.gradle  make.bat  settings.gradle
VNCOMPS/VNCOMP83/templateMobile/Android_Proj/jni/: Android.mk  Application.mk
VNCOMPS/VNCOMP83/templateMobile/WinRT_Proj/: AddInNative.sln
VNCOMPS/VNCOMP83/templateMobile/WinRT_Proj/AddInNative/: AddInNative.filters  AddInNative.vcxproj
VNCOMPS/VNCOMP83/templateMobile/iOS_Proj/NativeAPI.xcodeproj/: project.pbxproj
bind/: AddInNative.exp  AddInNative.lib
inc/: types.h
